// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Button /> > should match snapshot with primary prop 1`] = `
<button
  class="w-20 h-10 border-white rounded-md hover:text-white ease-linear duration-300 transition-all bg-green-900"
>
  Success
</button>
`;

exports[`<Button /> > should match snapshot without props 1`] = `
<button
  class="w-20 h-10 border-white rounded-md hover:text-white ease-linear duration-300 transition-all bg-white hover:bg-neutral-900"
>
  Error
</button>
`;
